<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3f85ff"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@string/deviceModel"
                    android:textColor="#000000"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:id="@+id/tv_device_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="#000000"
                    android:textSize="15sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_versionCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@string/versionCode"
                    android:textColor="#000000"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:id="@+id/tv_device_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="15sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@string/SNCode"
                    android:textColor="#000000"
                    android:textSize="15sp"></TextView>

                <TextView
                    android:id="@+id/tv_device_mid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="#000000"
                    android:textSize="15sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_check_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_checkupdate_onfocus"
                    android:focusable="true"
                    android:text="@string/checkUpdateButton"
                    android:textColor="#ffffff"
                    android:textSize="10sp"></Button>

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_checkupdate_onfocus"
                    android:focusable="true"
                    android:text="@string/back"
                    android:textColor="#ffffff"
                    android:textSize="10sp"></Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>