<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@drawable/shape_white_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="2">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:text="我是标题"
            android:textSize="13sp"
            android:textColor="#333333" />
        <ScrollView
            android:id="@+id/scroll_3button"
            android:layout_width="match_parent"
            android:layout_below="@+id/dialog_title"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:id="@+id/dialog_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:text="一段话概括"
                android:textSize="15sp"
                android:textColor="#333333" />
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/dialog_okButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_toLeftOf="@+id/dialog_cancelButton"
            android:gravity="center"
            android:text="@string/confirmButton"
            android:textSize="13sp"
            android:focusable="true"
            android:textColor="@drawable/select_btn_textcolor"
            android:background="@drawable/selector_btn_onfocus" />
        <Button
            android:id="@+id/dialog_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/cancelButton"
            android:textSize="13sp"
            android:focusable="true"
            android:textColor="@drawable/select_btn_textcolor"
            android:background="@drawable/selector_btn_onfocus" />
        <Button
            android:id="@+id/dialog_deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="false"
            android:gravity="center"
            android:text="@string/deleteButton"
            android:textSize="13sp"
            android:focusable="true"
            android:textColor="@drawable/select_btn_delete_textcolor"
            android:background="@drawable/selector_btn_onfocus" />
    </RelativeLayout>
</LinearLayout>
